Tue Nov 22 02:15:11 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* stdio/freopen.c (freopen64): Add dummy implementation.
	* stdio/tmpfile.c (tmpfile64): Likewise.
	* stdio/ul_fopen.c (fopen64): Likewise.
	* stdio/fpos.c (fgetpos64, fsetpos64, fseeko64, ftello64): Likewise.
	* unix/creat.c (creat64): Likewise.
	* unix/open.c (open64): Likewise.
	* unistd/lockf.c (lockf64): Likewise.
	* include/fcntl.h (open64, creat64, lockf64): Add prototypes.

Sat Nov 12 00:19:57 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* include/fenv.h (feenableexcept, fedisableexcept, fegetexcept):
	Add.
	* include/time.h, include/time.h, include/sys/select.h,
	include/getopt.h, include/string.h, include/wchar.h,
	include/search.h, include/unistd.h: Disable function prototypes for
	non-supported functions in SCL build.

Thu Nov  3 11:04:12 GMT 2011  Lee Noar  <leenoar@sky.com>

	* unix/getcwd.c (getcwd): Fix potential buffer overflow.
	getcwd() should set errno to ERANGE and return NULL if the size
	of the buffer supplied is too small for the path. It would
	appear that it relies on unixify() to do this, however, unixify()
	only checks for buffer overflow when the path does not require
	any processing. As RISC OS itself is supplying the path, then by
	default it will always require processing to unix format, so buffer
	overflow is never detected. Fix by adding an explicit check before
	calling unixify().

Tue Nov  1 21:42:53 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* unix/ul_lseek.c (lseek): Change off_t into __off_t.
	(lseek64): Change off_t into __off64_t.  Add check on __off64_t
	into __off_t overflow.
	* scl/chunkid05.s: Remove wrong entry after scalbln.  Add entries
	from isblank to tmpfile64.
	* include/unixlib/buildoptions.h (__UNIXLIB_LFS64_SUPPORT): Add.
	* include/unixlib/types.h (__off_t): Fix for UnixLib case.
	(__off64_t): Define as __quad_t, not __loff_t.
	* include/sys/types.h (__loff_t): Remove.
	* include/sys/stat.h (off_t): Support __USE_FILE_OFFSET64 and